tests/cases/parser/literals/characters/non_hex_unicode_char.stderr
error: invalid character in unicode escape sequence `g`
 --> $DIR/non_hex_unicode_char.hash:3:10
2 |   
3 |   k := '\u{g00000}';
  |            ^ here
  = info: unicode literals may only contain hexadecimal digits
